[package]
name = "DualVC-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
pairing-plus = { git = "https://github.com/algorand/pairing-plus"}
ff-zeroize = { version = "0.6.3", features = ["derive"]}
sha2 = "0.8"
bigint = { version = "4", default-features = false }
time="0.1"
byteorder="1.4.3"
